fix(qodana): various qodana fixes.